# melting_point

./: .gitignore  README.md  pyproject.toml
data/: config.yaml  main.py
